# human_model

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: human_model.launch
rviz/: human_model.rviz
src/: animator.py
urdf/female/: DESCRIPTION  character_Completed.blend  model.xacro  tree.json
urdf/female/meshes/: ArmLower.dae  ArmUpper.dae  LegLower.dae  LegUpper.dae  TorsoLower.dae  TorsoUpper.dae
urdf/female2/: DESCRIPTION  character_Completed.blend  model.xacro  tree.json
urdf/female2/meshes/: Head.dae  TorsoLower.dae  TorsoUpper.dae
urdf/female3/: DESCRIPTION  character_Completed.blend  model.xacro  tree.json
urdf/female3/meshes/: ArmLower.dae  ArmUpper.dae  Hand.dae  LegLower.dae  LegUpper.dae  TorsoLower.dae  TorsoUpper.dae  character_Completed.dae
urdf/simple/: DESCRIPTION  model.xacro  tree.json
urdf/simple/meshes/: Foot.dae  Hand.dae  Limb.dae  Sphere.dae  Torso.dae
