<?xml version="1.0"?>
<package>
  <name>human_model</name>
  <version>1.0.0</version>
  <description>The human_model package</description>
  <maintainer email="bilgin.coskun@metu.edu.tr">Bilgin Coşkun</maintainer>
  
  <license>GPLv3</license>
  <license>CC-BYv3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>

  <export>
	  All project is licensed with the GPLv3 with  the exception of all blend files and meshes
	  in meshes directory in female,female2 and female directories under urdf
	  directory except ArmLower.dae,ArmUpper.dae,LegUpper.dae in female2 and female3. These meshes 
	  are derivatives of "Complete Female Character"(http://www.blendswap.com/blends/view/22783)
	  by Bhavin Solanki,used under CC BY and licensed under CC BY by Bilgin Coşkun
  </export>
</package>
